# ocv_teaching

./: .gitignore  Prepare_data.ipynb  cell_reconstruction.py  common.py  data_retrieval.py  ocv.py  pyproject.toml  test.ipynb
notebooks/: 01_Materials.ipynb  02_Demos.ipynb  02_OCV_reconstruction.ipynb  02_Tank_Analogy.ipynb  03_OCV_Reconstruction.ipynb  03_SoC_tool.ipynb  03_Tank_Analogy.ipynb  04_Aging_Modes.ipynb  04_Interactive_Aging.ipynb
ocv_data/: Graphite_half_cell_ocv.csv  LFP_half_cell_ocv.csv  NMC811_half_cell_ocv.csv  Silicon_half_cell_ocv.csv
ocv_teaching/: 02_Demos.ipynb  BatteryTankPlotter.py  __init__.py  active_material.py  battery_mu_comparison.py  battery_mu_plot.py  battery_tank_plot.py  cell_reconstruction.py  ocv_blending.py  plot_ocv.py  sandbox.ipynb  soc_tool.ipynb  utils.py
ocv_teaching.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
