[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocv_teaching"
version = "0.1.0"
description = "A Python toolbox for modeling and visualizing battery OCV curves"
authors = [
{ name = "Lars von Kolzenberg", email = "lars.vonkolzenberg@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["battery", "OCV", "SOC", "modeling", "visualization"]
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent"
]

dependencies = [
"numpy>=1.20",
"matplotlib>=3.3",
"pandas>=1.1"
]

[project.urls]
"Homepage" = "https://github.com/lvk93/ocv_teaching"
"Repository" = "https://github.com/lvk93/ocv_teaching.git"

[tool.setuptools.packages.find]
where = [""]
exclude = ["tests*"]

